tests/error/comprehension_errors/borrow_leaked4.err
Error: Drop violation (at $FILE:12:18)
   | 
10 | @guppy
11 | def foo(qs: list[qubit] @owned) -> list[qubit]:
12 |     return [r for q in qs for r in bar(q)]
   |                   ^ Variable `q` with non-droppable type `qubit` is leaked

Guppy compilation failed due to 1 previous error
